Call brakeman without bin

--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -53,4 +53,4 @@ jobs:
       - name: Security audit dependencies
         run: bundle exec bundle audit --update
       - name: Security audit application code
-        run: bin/brakeman -q -w2
+        run: brakeman -q -w2
