--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -4,7 +4,7 @@
 #
 # This workflow will install a prebuilt Ruby version, install dependencies, and
 # run tests and linters.
-name: "Ruby on Rails CI"
+name: "Ruby on Rails CI/CD"
 on:
   push:
     branches: [ "main" ]
@@ -52,3 +52,15 @@ jobs:
       # Add or replace any other lints here
       - name: Security audit dependencies
         run: bundle exec bundle audit --update
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [test, lint]
+    steps:
+      - name: Setup AWS Copilot
+        # You may pin to the exact commit or the version.
+        # uses: softprops/setup-aws-copilot@b324e882a7df60542374421042ea47fba13883f6
+        uses: softprops/setup-aws-copilot@v0.1.0
+      - name: Deploy from Copilot
+        run: copilot deploy
+    
