--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -57,10 +57,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, lint]
     steps:
-      - name: Setup AWS Copilot
-        # You may pin to the exact commit or the version.
-        # uses: softprops/setup-aws-copilot@b324e882a7df60542374421042ea47fba13883f6
-        uses: softprops/setup-aws-copilot@v0.1.0
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: AWS Copilot
+        uses: ksivamuthu/aws-copilot-github-action@v0.0.4
       - name: Deploy from Copilot
         run: copilot deploy
-    
